--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+body {
+  margin:0px;
+}
 .App {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -5,6 +8,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(32, 32, 32);
+  
+}
+#faceWrapper {
   margin: 0;
   padding: 0;
   width: 100vw;
