--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin:0px;
-  background-color:#AAA
+  background-color:darkgray;
 }
 .App {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,9 +16,6 @@ body {
 #faceWrapper {
   margin: 0;
   padding: 0;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
 }
 
 canvas, h1{
